Fixed an overflow problem in chrome

--- a/styles/shCore.css
+++ b/styles/shCore.css
@@ -42,7 +42,6 @@
   vertical-align: baseline !important;
   width: auto !important;
   box-sizing: content-box !important;
-  font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
   font-weight: normal !important;
   font-style: normal !important;
   font-size: 1em !important;
